<resources>
    <string name="app_name">SherpaOnnxAndroid</string>
    <string name="real_asr">实时语音识别</string>
    <string name="real_asr_tip">离线、实时、流式转文字</string>
    <string name="tts">语音合成</string>
    <string name="model_management">模型管理</string>
    <string name="sherpa_onnx">Sherpa ONNX</string>
    <string name="tts_tip">文字转语音</string>
    <string name="model_tip">管理模型文件</string>
    <string name="about">关于</string>
    <string name="model">模型</string>
    <string name="home">首页</string>
    <string name="responsibility_reminder">用户自行下载/导入的模型需遵守模型作者授权协议，本应用不承担连带责任</string>
    <string name="import_local_model">导入本地模型</string>
    <string name="download">下载</string>
    <string name="delete">删除</string>
    <string name="use">使用</string>
    <string name="update">刷新</string>
    <string name="asr">语音识别ASR</string>
    <string name="start_asr">按住识别</string>
</resources>